--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -36,9 +36,9 @@ For more information, see xref:client-configuration:registration-cli.adoc#_salt_
 
 [IMPORTANT]
 ====
-To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
-For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally.
-For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars].
+* To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
+* For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally.
+  For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars].
 ====
 
 === Switching from Salt Minion to Salt Bundle
@@ -82,25 +82,21 @@ A shell script deploys the Salt Bundle onto the target system without installing
 
 The Python 3 deployed with the Bundle is used to handle Salt SSH session on the client, so Salt SSH (including bootstrapping with {webui}) is not dependant on Python installed on the system.
 
-[IMPORTANT]
-====
-The bootstrap repository must be created before bootstrapping the client with {webui}. Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
-For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
-====
-
-[IMPORTANT]
-====
-Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
-Therefore you must not mount [path]``/var/tmp`` with the [option]``noexec`` option.
-It is not possible to bootstrap the clients, which have [path]``/var/tmp`` mounted with [option]``noexec`` option, with the {webui} because the bootstrap process is using Salt SSH to reach a client.
-====
-
-[NOTE]
-====
 Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 to be installed on the client.
 This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
+
+[IMPORTANT]
 ====
+* The bootstrap repository must be created before bootstrapping the client with {webui}. 
+  Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
+  For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
+
+* Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
+  Therefore you must not mount [path]``/var/tmp`` with the [option]``noexec`` option.
+  It is not possible to bootstrap the clients, which have [path]``/var/tmp`` mounted with [option]``noexec`` option, with the {webui} because the bootstrap process is using Salt SSH to reach a client.
+====
+
 
 == Extend Salt Bundle with Python packages using pip
 
