--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -84,7 +84,7 @@ Do not disable SSL in your bootstrap script.
 Ensure that [guimenu]``Enable SSL`` is checked in the {webui}, or that the setting `USING_SSL=1` exists in the bootstrap script.
 If you disable SSL, the registration process requires custom SSL certificates.
 
-For more about custom certificates, see xref:administration:ssl-certs.adoc[].
+For more information about custom certificates, see xref:administration:ssl-certs.adoc[].
 ====
 
 
