Implemented teh suggestion.

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -252,12 +252,11 @@ image::grafana_sidemenu_datasource.png[scaledwidth=40%]
 +
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
-
-For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
-
-For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
-
-
+[NOTE]
+====
+. For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
+. For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
+====
 
 == Configure {productname} Monitoring
 
