A number of bugs fixed.

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -40,18 +40,27 @@ Ensure you have a working system backup available, in case of an emergency.
 
 == Perform a Migration
 
-Before starting the product migration, ensure there are no pending updates or patches.
-Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
-If your client system is not up to date, product migration may fail.
+//<<<<<<< HEAD
+//Before starting the product migration, ensure there are no pending updates or patches.
+//Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
+//If your client system is not up to date, product migration may fail.
 
 
 
-[NOTE]
-====
-Before starting a migration, make sure all the channels of the target product are fully synchronized.
-To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
-====
+//[NOTE]
+//====
+//Before starting a migration, make sure all the channels of the target product are fully synchronized.
+//To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
+//====
+//=======
+Before starting the product migration:
+//>>>>>>> 0e0438098ed (Converted admonition to plain text in the unnumbered list.)
 
+* Ensure there are no pending updates or patches.
+  Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
+  If your client system is not uptodate, product migration may fail.
+* Make sure all the channels of the target product are fully synchronized.
+  To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
 
 
 .Procedure: Performing a Migration
@@ -78,7 +87,7 @@ If you want to migrate a large number of clients to the next SP version, you can
 
 [WARNING]
 ====
-The product mas migration operation is dangerous.
+The product mass migration operation is dangerous.
 Be careful not to upgrade systems unintentionally.
 The process should be tested thoroughly.
 At least, do a dry-run first.
@@ -148,29 +157,36 @@ In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Poo
 [NOTE]
 ====
 Any systems that you are not intending to upgrade at this time, should be removed from the group.
+
+For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
 ====
 
 .Procedure: Adding Systems to the Group
 
-. For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
+//[IMPORTANT]
+//====
+//The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
+//If there are 100 systems in the group, you will see 100 actions scheduled.
+//It is important that all systems in the group support the same "migration target."
+//====
 
-
-[IMPORTANT]
-====
-The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` abd [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
-If there are 100 systems in the group, you will see 100 actions scheduled.
-It is important that all systems in the group support the same "migration target."
-+
-You will get the targets for all the systems in the group, when you run:
+. You will get the targets for all the systems in the group, when you run:
 +
 ----
 spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
 ----
 +
-Only select a target, which is reported for *all* systems.
-This command output a string of "IDs."
-The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
+. Only select a target, which is reported for *all* systems.
+  This command output a string of "IDs."
+  The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
++
+[IMPORTANT]
 ====
+The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
+If there are 100 systems in the group, you will see 100 actions scheduled.
+It is important that all systems in the group support the same "migration target."
+====
+
 
 
 
@@ -182,8 +198,9 @@ The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other c
 spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 \
     sle-product-sles15-sp3-pool-x86_64 "[190,203,195,1242]" -d
 ----
-
-The syntax for the [command]``system_scheduleproductmigration`` command is as follows:
++
+. The syntax for the [command]``system_scheduleproductmigration`` command is as follows:
++
 ----
 spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> \
     <MIGRATION_TARGET> [options]
@@ -233,7 +250,7 @@ Options::
 . -d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
 . -c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
 +
-In this case we included the "-d" option, which can be removed after a successful dry run.
+In this case we included the [literal]``-d`` option, which can be removed after a successful dry run.
 
 If successful, you will see the command output with the following for each scheduled system:
 
@@ -244,6 +261,6 @@ You can also track the action, in this case the dry run, in the {webui} for a gi
 From the system details page of the client, Navigate to menu:Events[History].
 If there are any failures during the dry run, the system should be investigated.
 
-If all is well, the "-d" option can be removed from the command to run the real migration.
+If all is well, the [literal]``-d`` option can be removed from the command to run the real migration.
 After the migration is complete, you can reboot the system from the {productname} {webui}.
 
