--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -38,7 +38,7 @@ For more information, see xref:client-configuration:registration-cli.adoc#_salt_
 ====
 * To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
 * For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally.
-  For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars].
+  For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[].
 ====
 
 === Switching from Salt Minion to Salt Bundle
