--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -90,7 +90,7 @@ Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf
 ====
 * The bootstrap repository must be created before bootstrapping the client with {webui}. 
   Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
-  For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
+  For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[].
 
 * Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
   Therefore you must not mount [path]``/var/tmp`` with the [option]``noexec`` option.
