Backport43 - removing Troubleshooting from titles,

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -56,48 +56,48 @@ endif::[]
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** xref:users.adoc[Users]
 ** xref:troubleshooting/tshoot-intro.adoc[Troubleshooting]
-*** xref:troubleshooting/tshoot-autoinstallation.adoc[Troubleshooting Autoinstallation]
-*** xref:troubleshooting/tshoot-bare-metal-systems.adoc[Troubleshooting Bare Metal Systems]
-*** xref:troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc[Troubleshooting Bootstrap Repository for End-of-Life Product]
-*** xref:troubleshooting/tshoot-cloned-salt-clients.adoc[Troubleshooting Cloned Salt Clients]
-*** xref:troubleshooting/tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
-*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
-*** xref:troubleshooting/tshoot-disabling-fqdns-grain.adoc[Troubleshooting Disabling the FQDNS grain]
-*** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
-*** xref:troubleshooting/tshoot-firewalls.adoc[Troubleshooting Firewalls]
-*** xref:troubleshooting/tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
-*** xref:troubleshooting/tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
-*** xref:troubleshooting/tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
-*** xref:troubleshooting/tshoot-localcert.adoc[Troubleshooting Local Certificates]
-*** xref:troubleshooting/tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
-*** xref:troubleshooting/tshoot-mail.adoc[Troubleshooting Mail Configuration]
-*** xref:troubleshooting/tshoot-mounting-tmp-with-noexec.adoc[Troubleshooting Mounting /tmp with noexec]
-*** xref:troubleshooting/tshoot-mounting-vartmp-with-noexec.adoc[Troubleshooting Mounting /var/tmp with noexec]
-*** xref:troubleshooting/tshoot-not-enough-disk-space.adoc[Troubleshooting Not Enough Disk Space]
-*** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
+*** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
+*** xref:troubleshooting/tshoot-bare-metal-systems.adoc[Bare Metal Systems]
+*** xref:troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc[Bootstrap Repository for End-of-Life Product]
+*** xref:troubleshooting/tshoot-cloned-salt-clients.adoc[Cloned Salt Clients]
+*** xref:troubleshooting/tshoot-corruptrepo.adoc[Corrupt Repositories]
+*** xref:troubleshooting/tshoot-custom-channel.adoc[Custom Channel]
+*** xref:troubleshooting/tshoot-disabling-fqdns-grain.adoc[Disabling the FQDNS grain]
+*** xref:troubleshooting/tshoot-diskspace.adoc[Disk Space]
+*** xref:troubleshooting/tshoot-firewalls.adoc[Firewalls]
+*** xref:troubleshooting/tshoot-highsynctimesoverwan.adoc[High sync times over WAN]
+*** xref:troubleshooting/tshoot-inactiveclients.adoc[Inactive Clients]
+*** xref:troubleshooting/tshoot-iss.adoc[Inter-Server Synchronization]
+*** xref:troubleshooting/tshoot-localcert.adoc[Local Certificates]
+*** xref:troubleshooting/tshoot-logintimeout.adoc[Login Timeout]
+*** xref:troubleshooting/tshoot-mail.adoc[Mail Configuration]
+*** xref:troubleshooting/tshoot-mounting-tmp-with-noexec.adoc[Mounting /tmp with noexec]
+*** xref:troubleshooting/tshoot-mounting-vartmp-with-noexec.adoc[Mounting /var/tmp with noexec]
+*** xref:troubleshooting/tshoot-not-enough-disk-space.adoc[Not Enough Disk Space]
+*** xref:troubleshooting/tshoot-notifications.adoc[Notifications]
 
 ifeval::[{suma-content} == true]
-*** xref:troubleshooting/tshoot-oes-repos-enablement.adoc[Troubleshooting OES repositories enablement]
+*** xref:troubleshooting/tshoot-oes-repos-enablement.adoc[OES repositories enablement]
 endif::[]
 
-*** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Package Inconsistencies]
-*** xref:troubleshooting/tshoot-packages-proxy.adoc[Troubleshooting Repository Via Proxy Issues]
-*** xref:troubleshooting/tshoot-passing-grains-to-start-event.adoc[Troubleshooting Passing Grains to a Start Event]
-*** xref:troubleshooting/tshoot-proxy-connections-and-fqdns.adoc[Troubleshooting Proxy Connections and FQDN]
-*** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
-*** xref:troubleshooting/tshoot-reg-from-webui-fails-no-errors.adoc[Troubleshooting Registration from {webui} fails and does not show any errors]
-*** xref:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[Registering traditional client as Salt minion after deleting it]
-*** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
-*** xref:troubleshooting/tshoot-rh-cdn-channel-and-multiple-certs.adoc[Troubleshooting Red Hat CDN Channel and Multiple Certificates]
-*** xref:troubleshooting/tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
+*** xref:troubleshooting/tshoot-osadjabberd.adoc[OSAD and jabberd]
+*** xref:troubleshooting/tshoot-packages.adoc[Package Inconsistencies]
+*** xref:troubleshooting/tshoot-packages-proxy.adoc[Repository Via Proxy Issues]
+*** xref:troubleshooting/tshoot-passing-grains-to-start-event.adoc[Passing Grains to a Start Event]
+*** xref:troubleshooting/tshoot-proxy-connections-and-fqdns.adoc[Proxy Connections and FQDN]
+*** xref:troubleshooting/tshoot-registerclones.adoc[Registering Cloned Clients]
+*** xref:troubleshooting/tshoot-reg-from-webui-fails-no-errors.adoc[Registration from {webui} fails and does not show any errors]
+*** xref:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[Traditional client as Salt minion after deleting it]
+*** xref:troubleshooting/tshoot-registertradrhel.adoc[Registering Traditional RHEL Clients]
+*** xref:troubleshooting/tshoot-rh-cdn-channel-and-multiple-certs.adoc[Red Hat CDN Channel and Multiple Certificates]
+*** xref:troubleshooting/tshoot-hostname-rename.adoc[Renaming the Server]
 *** xref:troubleshooting/tshoot-retrying-setup-target-system.adoc[Retrying to Set up the Target System]
-*** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:troubleshooting/tshoot-salt-clients-down-and-dns.adoc[Troubleshooting Salt clients shown as down and DNS settings]
-*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
-*** xref:troubleshooting/tshoot-schema-upgrade-fails.adoc[Schema Upgrade Fails]
-*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
-*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+*** xref:troubleshooting/tshoot-rpctimeout.adoc[RPC Timeouts]
+*** xref:troubleshooting/tshoot-salt-clients-down-and-dns.adoc[Salt clients shown as down and DNS settings]
+*** xref:troubleshooting/tshoot-saltboot.adoc[Saltboot]
+*** xref:troubleshooting/tshoot-schema-upgrade-fails.adoc[Upgrade Fails]
+*** xref:troubleshooting/tshoot-sync.adoc[Synchronization]
+*** xref:troubleshooting/tshoot-taskomatic.adoc[Taskomatic]
 *** xref:troubleshooting/tshoot-webui-fails-load.adoc[The Web UI Fails to Load]
 
 ifdef::backend-pdf[]
