explain using PTFs in SUSE Manager / Uyuni

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -55,6 +55,7 @@ endif::[]
 ** xref:task-schedules.adoc[Task Schedules]
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** xref:users.adoc[Users]
+** xref:ptfs.adoc[PTFs]
 ** xref:troubleshooting/tshoot-intro.adoc[Troubleshooting]
 *** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
 *** xref:troubleshooting/tshoot-bare-metal-systems.adoc[Bare Metal Systems]
