containerized proxy on salt client only https://github.com/SUSE/spacewalk/issues/19599

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -13,6 +13,9 @@ Only {sles} 15 SP3 and newer are supported to be used as container host for {pro
 endif::[]
 ====
 
+The container host must be connected to the manager as a Salt client.
+Connecting the container host as a traditional client will not work because required packages will not be available.
+
 [[installation-proxy-containers-requirements]]
 == Container Host Requirements
 
@@ -42,6 +45,21 @@ endif::[]
 | Minimum 100{nbsp}GB
 
 |===
+
+
+[cols="1,1,1", options="header"]
+.Proxy Container Host Software Requirements
+|===
+
+| Software
+| Details
+| Remark
+
+| Connection method
+| Salt client
+|
+
+| ===
 
 [IMPORTANT]
 ====
