--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -20,11 +20,17 @@ The correct ID of the package will be provided by SUSE Support during the course
 
 == Installing PTF packages
 
+[Note]
+====
+PTF packages are currently only supported for SLE 12 and SLE 15 based systems.
+Other versions or Operating Systems do not have this feature yet and the pages are not visible for them.
+====
+
 
 .Procedure: Enable and Synchronize PTF repositories using the command line
 
 . On the console enter ``mgr-sync refresh``
-. Enter ``mgr-sync list channel`` and look for channels starting with your SCC account name. E.g. `a123456-sles-15.3-ptfs-x86_64`
+. Enter ``mgr-sync list channel`` and look for channels starting with your SCC account name and `ptfs` in its name. E.g. `a123456-sles-15.3-ptfs-x86_64`
 . Enable the PTF channel with ``mgr-sync add channel <label>``
 
 Now this channel is available and can be added to every system which is using the same base channel.
@@ -42,7 +48,7 @@ In {productname} {webui} every system with PTFs available for installation has a
 . To check if the channel assignment is finished, navigate to menu:Systems[Events > History] to see the results.
 . Navigate to the menu:Systems[Software > PTFs > Install] sub tab
 . Select the ptf package you want to install
-. Click btn:[Install PTF], and [guimenu]``Confirm PTF Installation`` with btn:[Confirm].
+. Click btn:[Install PTF], and [guimenu]``Confirm Program Temporary Fixes (PTFs) Installation`` with btn:[Confirm].
 . To see PTF installation results, navigate to menu:Systems[Events > History].
 
 
@@ -59,16 +65,16 @@ the account-specific PTF repository. The updated PTF will remove the strict depe
 In cases where a PTF needs to be uninstalled and the non-patched version of the packages need to be installed on the system,
 a simple package remove cannot be used. The ptf package is not selectable in the standard package list page.
 
-. In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to de-install a PTF.
-. Navigate to the menu:Systems[Software > PTFs > Remove] sub tab
-. Select the ptf package you want to de-install
-. Click btn:[Deinstall PTF], and [guimenu]``Confirm PTF Deinstallation`` with btn:[Confirm].
+. In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to remove a PTF from.
+. Navigate to the menu:Systems[Software > PTFs > List/Remove] sub tab
+. Select the ptf package you want to remove
+. Click btn:[Remove PTFs], and on the [guimenu]``Confirm Program Temporary Fixes (PTFs) Removal`` page click btn:[Confirm].
 . To see the results, navigate to menu:Systems[Events > History].
 
 
 [NOTE]
 ====
-De-installation requires a special version of libzypp/zypper to be installed on the client system.
-The PTF Remove tab is only visible if this condition is met.
+Removing PTFs requires a special version of libzypp/zypper to be installed on the client system.
+The ``List/Remove`` tab is only visible if this condition is met.
 ====
 
