provide clear info

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -56,8 +56,8 @@ Connecting the container host as a traditional client will not work because requ
 | Remark
 
 | Connection method
-| Salt client
-|
+| Salt
+| Host must be configured as a Salt client
 
 | ===
 
