--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -2,7 +2,7 @@
 = Using PTFs in {productname}
 
 SUSE provide for their Enterprise Products temporary fixes shipped to individual customers.
-These `PTFs` (Program Temporary Fixes) can now be made available as repositories which can be synced in {productname}.
+These PTFs (Program Temporary Fixes) can now be made available as repositories which can be synced in {productname}.
 
 
 == Understanding PTF packages
@@ -20,7 +20,8 @@ The correct ID of the package will be provided by SUSE Support during the course
 
 == Installing PTF packages
 
-[Note]
+
+[NOTE]
 ====
 PTF packages are currently only supported for SLE 12 and SLE 15 based systems.
 Other versions or Operating Systems do not have this feature yet and the pages are not visible for them.
