--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -52,12 +52,8 @@ xref:administration:troubleshooting/tshoot-register-trad-as-salt-after-deletion.
 ----
 spacecmd system_delete FQDN
 ----
-
-. Remove the Salt key with the FQDN:
 +
-----
-salt-key -d FQDN
-----
+[command]``spacecmd system_delete`` also deletes the Salt key.
 
 Sometimes a new registration of a deleted (unregistered) client might not be possible.
 To solve this issue, some Salt cache files should be deleted on the {productname} Server (Salt master) before trying to re-register again:
