--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -1,7 +1,7 @@
 [[ptfs]]
 = Using PTFs in {productname}
 
-SUSE provide for their Enterprise Products temporary fixes shipped to individual customers.
+SUSE provides for their Enterprise Products temporary fixes shipped to individual customers.
 These PTFs (Program Temporary Fixes) can now be made available as repositories which can be synced in {productname}.
 
 
