more consistency with previous procedure

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -118,7 +118,8 @@ zypper rm -u salt salt-minion python*-salt sle-manager-tools-release
 ----
 systemctl stop venv-salt-minion
 zypper rm -y venv-salt-minion
-rm -rf /etc/zypp/{credentials,services,repos}.d/* /etc/venv-salt-minion/*
+rm /etc/zypp/repos.d/susemanager\:channels.repo /etc/venv-salt-minion/*
+rm -r /etc/venv-salt-minion/*
 ----
 
 For information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[].
