use save zypper call (per feedback)

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -107,7 +107,7 @@ rm -r /etc/salt/
 . Remove Client Packages:
 +
 ----
-zypper rm -u salt salt-minion python*-salt sle-manager-tools-release
+zypper rm salt salt-minion python*-salt sle-manager-tools-release
 ----
 
 
@@ -148,7 +148,7 @@ systemctl stop osad
 This should be tried first (in case the [package]``osad`` package is not installed, do not list it on the command line):
 +
 ----
-zypper rm -u spacewalksd spacewalk-check zypp-plugin-spacewalk \
+zypper rm spacewalksd spacewalk-check zypp-plugin-spacewalk \
 spacewalk-client-tools osad python2-zypp-plugin-spacewalk \
 python2-spacewalk-check python2-spacewalk-client-setup
 ----
@@ -156,7 +156,7 @@ python2-spacewalk-check python2-spacewalk-client-setup
 . On a SLES 15 client remove the following packages if installed:
 +
 ----
-zypper rm -u spacewalk-client-setup mgr-daemon spacewalk-check \
+zypper rm spacewalk-client-setup mgr-daemon spacewalk-check \
 zypp-plugin-spacewalk mgr-osad python3-zypp-plugin-spacewalk \
 python3-spacewalk-check python3-spacewalk-client-setup
 ----
