--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -1,14 +1,14 @@
 [[ptfs]]
 = Using PTFs in {productname}
 
-SUSE provides for their Enterprise Products temporary fixes shipped to individual customers.
-These PTFs (Program Temporary Fixes) can now be made available as repositories which can be synced in {productname}.
+SUSE provides temporary fixes for all currently supported solutions shipped directly to its customers.
+These PTFs (Program Temporary Fixes) are now available as repositories, which can be synced in {productname}.
 
 
 == Understanding PTF packages
 
 PTF packages are installed via a proxy package and are named `ptf-xxxxxx`.
-They will depend on the correct version of the package that is known to include the correction in the software. This type of package
+They will depend on the correct version of the package that is known to include the correction in the software. This type of package:
 
 * cannot be installed accidentally (ie. zypper update will never suggest installing them),
 * cannot be removed accidentally (ie. a newer package version will not replace the PTF one, unless the user makes it explicitly on the zypper command line),
@@ -36,14 +36,14 @@ Other versions or Operating Systems do not have this feature yet and the pages a
 
 Now this channel is available and can be added to every system which is using the same base channel.
 
-PTF packages needs to be installed explicit. They are not automatically installed when updating a system.
-The SUSE Customer Support will tell the ptf number to fix a specific problem.
+PTF packages need to be installed explicitly, since they are not automatically picked up when updating a system.
+The SUSE Customer Support will provide the PTF number to fix a specific problem. With the number the proxy package can be identified in the PTF list.
 In {productname} {webui} every system with PTFs available for installation has a page which list them.
 
 
 .Procedure: Installation of PTF packages
 
-. In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to install a PTF.
+. In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client where you want to install a PTF.
 . Navigate to the menu:Systems[Software > Packages > Software Channels] and select the [systemitem]``PTF channel``.
 . Click btn:[Next], and [guimenu]``Confirm Software Channel Change`` with btn:[Confirm].
 . To check if the channel assignment is finished, navigate to menu:Systems[Events > History] to see the results.
@@ -53,6 +53,9 @@ In {productname} {webui} every system with PTFs available for installation has a
 . To see PTF installation results, navigate to menu:Systems[Events > History].
 
 
+In case a PTF should be installed using the API, the normal [systemitem]``system.schedulePackageInstall`` api can be used with the proxy package name.
+
+
 == After PTF installation
 
 Once a PTF is confirmed to address the reported issue, the updated package will be tracked for inclusion
@@ -60,6 +63,10 @@ into a future maintenance update before being widely distributed as an regular m
 
 When this regular update with the fix is released, an updated version of the PTF will also be released into
 the account-specific PTF repository. The updated PTF will remove the strict dependencies and allow updates to be installed again.
+
+The replacement of the PTF with the maintenance update which include the fix happens automatically via
+a standard package update or patch installation.
+
 
 == Removing the patched version of a package
 
@@ -78,4 +85,19 @@ a simple package remove cannot be used. The ptf package is not selectable in the
 Removing PTFs requires a special version of libzypp/zypper to be installed on the client system.
 The ``List/Remove`` tab is only visible if this condition is met.
 ====
+
+In case the PTF should be removed using the API, the normal [systemitem]``system.schedulePackageRemove`` api can be used with the proxy package name.
+
+
+== Removing the patched version of a package on the client
+
+In case a PTF should be removed directly on the client using the console, it is required to use a special
+command ``zypper removeptf ...``. All other ways result either in an error or can lead to unwanted
+behavior like removing very importand packages from the system and make the system unusable.
+
+For the command line usage see also: https://www.suse.com/de-de/support/kb/doc/?id=000020596
+
+
+
+
 
