mention other packagers

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -69,6 +69,7 @@ rm /var/cache/salt/master/thin/thin.tgz
 == Delete a Client from the Command Line
 
 
+
 === Salt Client
 
 // Manual Registration Cleanup
@@ -77,7 +78,8 @@ This process is only for {productname} clients, do not run it on the {productnam
 
 [NOTE]
 ====
-You must not execute the following procedure on clients running {rhel} and clones.
+You must not execute the following procedure on clients running {rhel}, {debian}, or clones.
+Instead of [command]``zypper`` use equivalent packager commands such as [command]``yum``, [command]``dnf``, or [command]``apt``.
 ====
 
 .Procedure: Deleting SLES 12 and 15 Salt Clients
@@ -130,7 +132,8 @@ This process is only for {productname} clients, do not run it on the {productnam
 
 [NOTE]
 ====
-You must not execute the following procedure on clients running {rhel} and clones.
+You must not execute the following procedure literally on clients running {rhel}, {debian}, or clones.
+Instead of [command]``zypper`` use equivalent packager commands such as [command]``yum``, [command]``dnf``, or [command]``apt``.
 ====
 
 .Procedure: Traditional SLES 12 and 15 Clients - Manual Cleanup
