--- a/README.adoc
+++ b/README.adoc
@@ -47,24 +47,25 @@ endif::[]
 == Test Status
 
 === HTML
-image:https://github.com/uyuni-project/uyuni-docs/workflows/build_test_deploy_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/feature_tests_uyuni/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/build_test_deploy_uyuni/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/main_uyuni.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/feature_tests_uyuni/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/feature_tests_uyuni.yml"]
 
 === Syntax and Files
-image:https://github.com/uyuni-project/uyuni-docs/workflows/Linting/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/Find%20unused%20files/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Linting/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/vale_tests.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Find%20unused%20files/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/find_unused.yml"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/Enforced%20checkstyle/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/enforcing_checkstyle.yml"]
 
 === Weblate Translations
-image:https://github.com/uyuni-project/uyuni-docs/workflows/UPDATE%20TRANSLATION%20FILES/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/UPDATE%20TRANSLATION%20FILES/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs/actions/workflows/update_gettext.yml"]
 
 === PDF Translations
 //Translation Test badges
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_en_us/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_zh_cn/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ko_kr/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ja_jp/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_cs_cz/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_es_es/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_en_us/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_zh_cn/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ko_kr/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ja_jp/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_cs_cz/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_es_es/badge.svg?branch=manager-4.3["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
 
 
 
