Monitoring admonitions cleanup (#2053)
* Monitoring admonitions cleanup.

* Typos.

* Implemented teh suggestion.

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -99,7 +99,7 @@ The Prometheus software is also available for {productname} Proxy and {productna
 ====
 Prometheus expects POSIX filesystem for storing data.
 Non-POSIX compliant filesystems are not supported.
-NFS filesystems are explicitly not supported.
+NFS filesystems are not supported.
 ====
 
 .Procedure: Installing Prometheus Using the {webui}
@@ -188,7 +188,7 @@ scrape_configs:
 systemctl restart prometheus
 ----
 
-For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/
+For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/.
 
 
 
@@ -218,8 +218,6 @@ Grafana is not available on {productname} Proxy.
 {productname} provides pre-built dashboards for server self-health, basic client monitoring, and more.
 You can choose which dashboards to provision in the formula configuration page.
 ====
-
-For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
 
 
 .Procedure: Manually Installing Grafana
@@ -254,11 +252,11 @@ image::grafana_sidemenu_datasource.png[scaledwidth=40%]
 +
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
-For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
-
-For more information about the monitoring formulas with forms, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
-
-
+[NOTE]
+====
+. For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
+. For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
+====
 
 == Configure {productname} Monitoring
 
@@ -311,7 +309,7 @@ Metrics for a proxy are not automatically collected by Prometheus.
 To enable self-health monitoring on a proxy, you need to manually install exporters and enable them.
 ====
 
-Following relevant metrics are collected on the {productname} Server.
+The following relevant metrics are collected on the {productname} Server.
 
 .PostgreSQL exporter (port 9187)
 [cols="45,10,45"]
