--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -99,7 +99,7 @@ The Prometheus software is also available for {productname} Proxy and {productna
 ====
 Prometheus expects POSIX filesystem for storing data.
 Non-POSIX compliant filesystems are not supported.
-NFS filesystems are explicitly not supported.
+NFS filesystems are not supported.
 ====
 
 .Procedure: Installing Prometheus Using the {webui}
@@ -188,7 +188,7 @@ scrape_configs:
 systemctl restart prometheus
 ----
 
-For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/
+For more information about the Prometheus configuration options, see the official Prometheus documentation at https://prometheus.io/docs/prometheus/latest/configuration/configuration/.
 
 
 
@@ -219,8 +219,6 @@ Grafana is not available on {productname} Proxy.
 You can choose which dashboards to provision in the formula configuration page.
 ====
 
-For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
-
 
 .Procedure: Manually Installing Grafana
 
@@ -234,8 +232,8 @@ zypper in grafana
 ----
 systemctl enable --now grafana-server
 ----
-. Check that the Grafana interface is loading correctly.
-    In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
+. In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
+. On the login page, enter ``admin`` for username and password.
 . Click btn:[Log in]. 
     If login is successful, then you will see a prompt to change the password.
 . Click btn:[OK] on the prompt, then change your password.
@@ -254,11 +252,11 @@ image::grafana_sidemenu_datasource.png[scaledwidth=40%]
 +
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
-For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
-
-For more information about the monitoring formulas with forms, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
-
-
+[NOTE]
+====
+. For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
+. For more information on how to manually install and configure Grafana, see https://grafana.com/docs.
+====
 
 == Configure {productname} Monitoring
 
@@ -311,7 +309,7 @@ Metrics for a proxy are not automatically collected by Prometheus.
 To enable self-health monitoring on a proxy, you need to manually install exporters and enable them.
 ====
 
-Following relevant metrics are collected on the {productname} Server.
+The following relevant metrics are collected on the {productname} Server.
 
 .PostgreSQL exporter (port 9187)
 [cols="45,10,45"]
