provide system_delete options
(per feedback)

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -55,6 +55,19 @@ spacecmd system_delete FQDN
 +
 [command]``spacecmd system_delete`` also deletes the Salt key.
 
+[command]``system_delete`` offers the following options:
+
+----
+usage: system_delete [options] <SYSTEMS>
+
+    options:
+          -c TYPE - Possible values:
+             *  'FAIL_ON_CLEANUP_ERR' - fail in case of cleanup error,
+             *  'NO_CLEANUP' - do not cleanup, just delete,
+             *  'FORCE_DELETE' - try cleanup first but delete server anyway
+	        in case of error
+----
+
 Sometimes a new registration of a deleted (unregistered) client might not be possible.
 To solve this issue, some Salt cache files should be deleted on the {productname} Server (Salt master) before trying to re-register again:
 
