Backpor43. Colelction of random minor fixes.

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -23,7 +23,7 @@ However, this method requires significant disk space and could take a long time 
 
 [NOTE]
 ====
-If you want to only back up the required files and directories, use the following list.
+If you want to back up only the required files and directories, use the following list.
 To make this process simpler, and more comprehensive, we recommend backing up the entire [path]``/etc`` and [path]``/root`` directories, not just the ones specified here.
 Some files only exist if you are actually using the related {susemgr} feature.
 ====
