--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -10,10 +10,10 @@ These PTFs (Program Temporary Fixes) are now available as repositories, which ca
 PTF packages are installed via a proxy package and are named `ptf-xxxxxx`.
 They will depend on the correct version of the package that is known to include the correction in the software. This type of package:
 
-* cannot be installed accidentally (ie. zypper update will never suggest installing them),
-* cannot be removed accidentally (ie. a newer package version will not replace the PTF one, unless the user makes it explicitly on the zypper command line),
-* is only updated when the newer version is known to address the specific issue addressed first by the PTF,
-* updates only packages already installed on the system (a software that is split in multiple packages will have only the packages currently installed on the system being replaced).
+* cannot be installed accidentally (i.e. zypper update will never suggest installing them),
+* cannot be removed accidentally (i.e. a newer package version will not replace the PTF one, unless the user makes it explicitly on the zypper command line),
+* is only updated when the newer version is known to address the specific issue previously solved by the PTF,
+* updates only packages already installed on the system (i.e. if a software is split into multiple packages, the PTF will replace only those currently installed on the system).
 
 The correct ID of the package will be provided by SUSE Support during the course of the support case investigation, along with instruction on how to deploy/restart the affected services.
 
