Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -30,15 +30,16 @@ Other versions or Operating Systems do not have this feature yet and the pages a
 
 .Procedure: Enable and Synchronize PTF repositories using the command line
 
-. On the console enter ``mgr-sync refresh``
-. Enter ``mgr-sync list channel`` and look for channels starting with your SCC account name and `ptfs` in its name. E.g. `a123456-sles-15.3-ptfs-x86_64`
-. Enable the PTF channel with ``mgr-sync add channel <label>``
+. On the console enter [command]``mgr-sync refresh``.
+. Enter [command]``mgr-sync list channel`` and look for channels starting with your SCC account name and `ptfs` in its name.
+  E.g. `a123456-sles-15.3-ptfs-x86_64`.
+. Enable the PTF channel with [command]``mgr-sync add channel <label>``.
 
 Now this channel is available and can be added to every system which is using the same base channel.
 
 PTF packages need to be installed explicitly, since they are not automatically picked up when updating a system.
 The SUSE Customer Support will provide the PTF number to fix a specific problem. With the number the proxy package can be identified in the PTF list.
-In {productname} {webui} every system with PTFs available for installation has a page which list them.
+In {productname} {webui} every system with PTFs available for installation has a page which lists them.
 
 
 .Procedure: Installation of PTF packages
@@ -47,13 +48,13 @@ In {productname} {webui} every system with PTFs available for installation has a
 . Navigate to the menu:Systems[Software > Packages > Software Channels] and select the [systemitem]``PTF channel``.
 . Click btn:[Next], and [guimenu]``Confirm Software Channel Change`` with btn:[Confirm].
 . To check if the channel assignment is finished, navigate to menu:Systems[Events > History] to see the results.
-. Navigate to the menu:Systems[Software > PTFs > Install] sub tab
-. Select the ptf package you want to install
+. Navigate to the menu:Systems[Software > PTFs > Install] sub tab.
+. Select the ptf package you want to install.
 . Click btn:[Install PTF], and [guimenu]``Confirm Program Temporary Fixes (PTFs) Installation`` with btn:[Confirm].
 . To see PTF installation results, navigate to menu:Systems[Events > History].
 
 
-In case a PTF should be installed using the API, the normal [systemitem]``system.schedulePackageInstall`` api can be used with the proxy package name.
+In case a PTF should be installed using the API, the normal [systemitem]``system.schedulePackageInstall`` API can be used with the proxy package name.
 
 
 == After PTF installation
@@ -74,8 +75,8 @@ In cases where a PTF needs to be uninstalled and the non-patched version of the 
 a simple package remove cannot be used. The ptf package is not selectable in the standard package list page.
 
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to remove a PTF from.
-. Navigate to the menu:Systems[Software > PTFs > List/Remove] sub tab
-. Select the ptf package you want to remove
+. Navigate to the menu:Systems[Software > PTFs > List/Remove] sub tab.
+. Select the ptf package you want to remove.
 . Click btn:[Remove PTFs], and on the [guimenu]``Confirm Program Temporary Fixes (PTFs) Removal`` page click btn:[Confirm].
 . To see the results, navigate to menu:Systems[Events > History].
 
@@ -91,9 +92,8 @@ In case the PTF should be removed using the API, the normal [systemitem]``system
 
 == Removing the patched version of a package on the client
 
-In case a PTF should be removed directly on the client using the console, it is required to use a special
-command ``zypper removeptf ...``. All other ways result either in an error or can lead to unwanted
-behavior like removing very importand packages from the system and make the system unusable.
+In case a PTF should be removed directly on the client using the console, it is required to use a special command ``zypper removeptf ...``.
+  All other ways result either in an error or can lead to unwanted behavior like removing important packages from the system and make the system unusable.
 
 For the command line usage see also: https://www.suse.com/de-de/support/kb/doc/?id=000020596
 
