--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -6,16 +6,16 @@ In such case, the images are copied from {suse} registry to an internal registry
 
 You should first register Salt minion to {productname} server, and then re-use the same FQDN in a generation.
 
-//When changing the base channel to have the {productname} client tools, this may lead to package conflicts and port conflicts.
 
 
 [[image.from.suse.to.internal.registry]]
 == Image copying from {suse} registry to internal registry 
 
-[IMPORTANT]
-====
-This procedure illustrates deployment of {salt} proxies only.
-====
+
+This example illustrates deployment of {salt} proxies only.
+
+.Procedure: Deploying {salt} Proxy from containerized image
+[role=procedure]
 
 . Install [literal]``skopeo`` on a machine with access to [literal]``registry.suse.com``:
 +
@@ -36,7 +36,7 @@ done
 ----
 /etc/containers/registries.conf
 ----
-
++
 [NOTE]
 ====
 If you want to copy the images to a registry with SSL, remove the property [literal]`--dest-tls-verify=false`.
@@ -44,6 +44,12 @@ If you want to copy the images to a registry with SSL, remove the property [lite
 
 [[air-gapped-solution-for-podman]]
 == Air gapped solution for Podman
+
+This example illustrates deployment of containerized image on a machine with no access to internet.
+
+
+.Procedure: Deploying air gapped proxy
+[role=procedure]
 
 . Before starting the pod, on a machine with internet access run:
 +
