--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -43,12 +43,12 @@ If you want to copy the images to a registry with SSL, remove the property [lite
 ====
 
 [[air-gapped-solution-for-podman]]
-== Air gapped solution for Podman
+== Air-gapped solution for Podman
 
 This example illustrates deployment of containerized image on a machine with no access to internet.
 
 
-.Procedure: Deploying air gapped proxy
+.Procedure: Deploying air-gapped proxy
 [role=procedure]
 
 . Before starting the pod, on a machine with internet access run:
@@ -67,7 +67,7 @@ podman save -m -o proxy-images.tar \
     registry.suse.com/suse/manager/4.3/proxy-tftpd
 ----
 +
-. Transfer the [literal]`proxy-images.tar` to the air gapped proxy.
+. Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
 . Run this command to start the pod:
 +
 ----
